# flowrra

./: .flowrra_schedule.db  .gitignore  .readthedocs.yml  DEVELOPMENT.md  MANAGEMENT_API.md  QUICKSTART.md  README.md  READ_THE_DOCS_PUBLISHING_GUIDE.md  SCHEDULER.md  SPHINX_DOCUMENTATION_SETUP.md  UI.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_debug.py
docs/: UI_IMPLEMENTATION_SUMMARY.md  UI_QUICK_REFERENCE.md  WEBSOCKET_SETUP.md
examples/: basic_usage.py  django_ui_example.py  fastapi_ui_example.py  management_api_example.py  quart_ui_example.py
sphinx-docs/: requirements.txt
sphinx-docs/source/: changelog.rst  concepts.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  quickstart.rst
sphinx-docs/source/api/: flowrra.backends.rst  flowrra.brokers.rst  flowrra.executors.rst  flowrra.management.rst  flowrra.rst  flowrra.scheduler.backends.rst  flowrra.scheduler.rst  flowrra.ui.base.rst  flowrra.ui.rst  modules.rst
sphinx-docs/source/guides/: backends.rst  executors.rst  scheduling.rst  tasks.rst  web-ui.rst
src/flowrra/: __init__.py  app.py  config.py  constants.py  events.py  exceptions.py  executor.py  registry.py  task.py
src/flowrra/backends/: __init__.py  base.py  factory.py  memory.py  redis.py
src/flowrra/brokers/: __init__.py  base.py  factory.py  redis.py
src/flowrra/executors/: __init__.py  base.py  cpu_executor.py  io_executor.py
src/flowrra/management/: __init__.py  manager.py
src/flowrra/scheduler/: __init__.py  cron.py  models.py  scheduler.py
src/flowrra/scheduler/backends/: __init__.py  base.py  mysql.py  postgresql.py  sql.py  sqlite.py
src/flowrra/ui/: __init__.py  django.py  django_websocket.py  fastapi.py  flask.py  quart_websocket.py
src/flowrra/ui/base/: __init__.py  adapter.py  formatter.py  schedule_service.py  ui_service.py
src/flowrra/ui/static/: README.md  app.js  app3.js  style.css
src/flowrra/ui/templates/: README.md  base.html  dashboard.html  schedules.html  tasks.html
src/flowrra/ui/templates/django/: base.html  dashboard.html  schedules.html  tasks.html
tests/: README.md  __init__.py  conftest.py  test_backend_factory.py  test_backends.py  test_broker_basic.py  test_cpu_executor.py  test_exceptions.py  test_executor.py  test_executor_with_redis.py  test_flowrra_app.py  test_integration.py  test_io_executor.py  test_management_api.py  test_redis_backend.py  test_registry.py  test_scheduler_backend.py  test_scheduler_cron.py  test_scheduler_service.py  test_task.py  test_ui_base_adapter.py  test_ui_django_adapter.py  test_ui_fastapi_adapter.py  test_ui_flask_adapter.py  test_websocket_eventbus.py
