[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowrra"
version = "0.1.0"
description = "Async task executor built on asyncio - a lightweight Celery alternative"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ahmad Ameen", email = "ahmadmameen7@gmail.com" }
]
keywords = ["async", "tasks", "queue", "celery", "asyncio", "background-jobs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
redis = [
    "redis[hiredis]>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/flowrra/flowrra"
Documentation = "https://github.com/flowrra/flowrra#readme"
Repository = "https://github.com/flowrra/flowrra"
Issues = "https://github.com/flowrra/flowrra/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flowrra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
