[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowrra"
version = "0.1.3"
description = "Async task executor built on asyncio - a lightweight Celery alternative"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ahmad Ameen", email = "ahmadmameen7@gmail.com" }
]
keywords = ["async", "tasks", "queue", "celery", "asyncio", "background-jobs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiosqlite>=0.19.0",  # Required for SQLite scheduler backend
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
redis = [
    "redis[hiredis]>=5.0.0",
]
postgresql = [
    "asyncpg>=0.29.0",
]
mysql = [
    "aiomysql>=0.2.0",
]
ui-fastapi = [
    "fastapi>=0.100.0",
    "jinja2>=3.1.0",
]
ui-flask = [
    "flask>=2.3.0",
    "jinja2>=3.1.0",
]
ui-django = [
    "django>=4.2.0",
]
ui = [
    "fastapi>=0.100.0",
    "flask>=2.3.0",
    "django>=4.2.0",
    "jinja2>=3.1.0",
]
all = [
    "redis[hiredis]>=5.0.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
    "fastapi>=0.100.0",
    "flask>=2.3.0",
    "django>=4.2.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/flowrra/flowrra"
Documentation = "https://flowrra.readthedocs.io/en/latest/"
Repository = "https://github.com/flowrra/flowrra"
Issues = "https://github.com/flowrra/flowrra/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flowrra"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
